Change email address

--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@ title: Rainbow Pixels
 layout: page
 ---
 
-<a class="btn btn-light" href="mailto:hey@rainbowpixels.dk?subject=Rainbow Pixels website">Shoot me an email?</a>
+<a
+  class="btn btn-light"
+  href="mailto:mads@rainbowpixels.dk?subject=Rainbow Pixels website"
+  >Shoot me an email?</a
+>
