--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: page
 
 <a
   class="btn btn-light"
-  href="mailto:mads@rainbowpixels.dk?subject=Rainbow Pixels website"
-  >Shoot me an email?</a
+  href="mailto:mads@rainbowpixels.dk?subject=Rainbow Pixels"
 >
+  Send me an email
+</a>
